--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     implementation 'com.android.support:design:30.0.0'
     implementation 'com.android.volley:volley:1.1.0'
     compileOnly 'com.google.android.wearable:wearable:2.5.0'
+    implementation 'com.muddzdev:styleabletoast:2.2.4'
 
 }
